--- a/index.html
+++ b/index.html
@@ -88,5 +88,19 @@
     }).addTo(map).bindPopup("📍 Vous êtes ici").openPopup();
   });
 </script>
+
+<hr style="margin-top: 40px;">
+<h2 style="text-align:center;">📄 Guide PDF du Parcours</h2>
+
+<iframe src="Parcours_Dolce_Milano_Express.pdf" width="100%" height="600px" style="border:1px solid #ccc; margin-top:10px;">
+  Ce navigateur ne supporte pas l'affichage PDF. <a href="Parcours_Dolce_Milano_Express.pdf">Téléchargez le PDF</a>.
+</iframe>
+
+<p style="text-align:center; margin-top: 20px;">
+  <a href="Parcours_Dolce_Milano_Express.pdf" download style="font-size:18px; padding:10px 20px; background:#2c3e50; color:white; text-decoration:none; border-radius:5px;">
+    📥 Télécharger le guide PDF
+  </a>
+</p>
+
 </body>
 </html>
